# centaur

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Justfile  README.md  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  slack-app-manifest.yml
.github/workflows/: ci.yml  e2e.yml  (+2 more)
centaur_sdk/: __init__.py  evidence.py
contrib/: deploy-local-runsheet.md  local-dev-plan.md  slack-app-manifest.json  slack-app-manifest.yaml
docs/: VIDEO-BUILD-HANDOFF.md  agent-runtime-api-spec.md  agent-runtime-incident-review-2026-03-26.md  agent-runtime-redesign.md  agent-runtime-ship-checklist.md  agent-runtime-table-spec.md  agent-runtime-workflows.md  hackathon-guide.md  vocs.config.ts
e2e/: TESTING_MATRIX.md
monitoring/: nginx.conf
profiles/: default.json
sandbox/: Dockerfile  SYSTEM_PROMPT.md  SYSTEM_PROMPT_LEGAL.md  call.sh  harness_session.py
scripts/: auth-bootstrap.js  backfill_titles.py  dbmate  local-agent-message-execute.sh  qa-agent-runtime-and-tools.sh  qa-agent-runtime-flow.sh  qa-full-tools.py  qa_agent_runtime_flow.py
tests/: test_harness_session.py  test_plugins.py
tool-qa-output/: report.md
tools/: README.md
tools/comms_factory/: client.py  pyproject.toml
tools/comms_factory/tests/: test_client.py
tools/crypto/eodhd/: pyproject.toml
workflows/: comms_audit.py  comms_release.py  comms_shared.py  company_context_documents.py  daily_checklist_digest.py  morning_market_brief.py  room_conflict_monitor.py  self_improve_daily.py  self_improve_deploy_notifier.py  slack_sync.py  usage_stats.py
(+1181 files in other folders)
