[project]
name = "comms-factory"
description = "Centaur wrapper around the internal comms-factory attached service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
