[project]
name = "eodhd"
description = "EODHD Financial API — real-time quotes and historical EOD prices"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
eodhd = "eodhd.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["eodhd.com"]
secrets = ["EODHD_API_KEY"]
